Adding payment methods to en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,3 +4,7 @@
 en:
   hello: "Hello world"
   added_string: "Hey, I'm new around here"
+  payment_methods:
+    - credit card
+    - wire transfer
+    - paypal
